--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>   
 <!-- navbar starts here -->
-<nav class="navbar fixed-top navbar-expand-lg navbar-light">
+<nav class="navbar fixed-top navbar-light">
   <div class="container-fluid">
     <img class="logo" src="./images/logoo.png" alt="">
     <a class="navbar-brand" href="#"><h2 class="nav-title">Keralatourism.org</h2><h5 class="nav-writing">Welcome to Gods Own Country</h5></a>
