--- a/login.html
+++ b/login.html
@@ -21,13 +21,13 @@ background-size: cover;" background="./images/signupbg.jpg" >
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./district.html">Districts</a>
+              <a class="nav-link" href="#">Districts</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#topDestinations">Top Destinations</a>
+              <a class="nav-link" href="./index.html#topDestinations">Top Destinations</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./login.html">Login</a>
@@ -36,7 +36,7 @@ background-size: cover;" background="./images/signupbg.jpg" >
               <a class="nav-link" href="./signup.html">Signup</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contactUS">Contact Us</a>
+              <a class="nav-link" href="./index.html#contactUS">Contact Us</a>
             </li>
           </ul>
       </div>
