--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@ background-size: cover;" background="./images/signupbg.jpg" >
               <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Districts</a>
+              <a class="nav-link" href="./district.html">Districts</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./index.html#topDestinations">Top Destinations</a>
