--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@ background-size: cover;" background="./images/signupbg.jpg" >
               <a class="nav-link" href="./index.html#topDestinations">Top Destinations</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./login.html">Login</a>
+              <a class="nav-link" href="#">Login</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./signup.html">Signup</a>
