--- a/district.html
+++ b/district.html
@@ -33,7 +33,7 @@
               <a class="nav-link" href="#">Districts</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html#topDestinations">Top Destinations</a>
+              <a class="nav-link" href="./index.html#topDestinations">Top Destinations</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./login.html">Login</a>
