--- a/kollam.html
+++ b/kollam.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="./district.html">Districts</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/index.html#topDestinations">Top Destinations</a>
+                    <a class="nav-link" href="./index.html#topDestinations">Top Destinations</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./login.html">Login</a>
