--- a/kozhikode.html
+++ b/kozhikode.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="./district.html">Districts</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/index.html#topDestinations">Top Destinations</a>
+                    <a class="nav-link" href="./index.html#topDestinations">Top Destinations</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./login.html">Login</a>
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="./signup.html">Signup</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/index.html#contactUs">Contact Us</a>
+                    <a class="nav-link" href="./index.html#contactUs">Contact Us</a>
                   </li>
                 </ul>
             </div>
