--- a/kollam.html
+++ b/kollam.html
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="./signup.html">Signup</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/index.html#contactUs">Contact Us</a>
+                    <a class="nav-link" href="./index.html#contactUs">Contact Us</a>
                   </li>
                 </ul>
             </div>
