--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 
     <div class="Icons">
-        <div class="footerHeading" id="contactUS"><h2>Connect with Us</h2></div>
+        <div class="footerHeading"><h2>Connect with Us</h2></div>
         <div class="footerIcons">
           <i class="fa-brands fa-google fa-2x" style="color:rgb(66 133 244);"></i>
           <i class="fa-brands fa-facebook fa-2x" style="color: rgb(66 103 178)"></i>
@@ -159,7 +159,7 @@
 
 
     <div class="footer">
-        <h3>Contact Us</h3>
+        <h3 id="contactUS">Contact Us</h3>
         <p>Department of Tourism, Government of Kerala, Park View, Thiruvananthapuram, Kerala, India - 695 033 <br>
           Phone: +91 471 2321132, Fax: +91 471 2322279, E-mail: info@keralatourism.org. <br>
           All rights reserved © Kerala Tourism 2022. Copyright | Terms of Use | Cookie Policy | Contact Us.<br>
