--- a/index.html
+++ b/index.html
@@ -72,18 +72,24 @@
 
     <!-- carosol ends -->
 
-<div>
+<div class="row row-cols-1 row-cols-md-3 g-4" id="bodyContent">
     <div class="About">
-        <p><b>kerala</b> Known as the “God’s Own Country”, Kerala is surely one of the most beautiful places in India. Kerala or Keralam is a Malayalee word made up of two parts; ‘Kera’ meaning coconut and ‘alam’ meaning land. 
+        <p><b style="font-family: 'Lemonada', cursive;
+          font-family: 'Merriweather Sans', sans-serif;
+          font-family: 'Red Hat Text', sans-serif;
+          font-size: 30px;">kerala</b> Known as the “God’s Own Country”, Kerala is surely one of the most beautiful places in India. Kerala or Keralam is a Malayalee word made up of two parts; ‘Kera’ meaning coconut and ‘alam’ meaning land. 
         The land of coconut trees is a destination that has something for every kind of traveller. Whether you want to sail the glistening backwaters or lose yourself in the mystical coastal greenery, Kerala is an ultimate tourist destination to experience bliss and serenity. 
         There’s something immensely alluring about God’s Own Country, Kerala. Just the thought of being there teleports one straight into the heart of it all, mind, body, and soul. Then when you set foot in it, it’s a thousand times more charming than your imagination could ever perceive. 
         Inarguably one of India’s most insanely beautiful states, Kerala is a tranquil world away from all the frenzied worlds. Here, for every calming beach, there is a roar of the jungle. For every languid houseboat cruise, a thrilling snake-boat race.
         For every picturesque, nonchalant hill station, there is a culturally evocative city. For every aromatic spice field, a fragrant tea garden. For every therapeutic massage, the highs of toddy. And for every modest village, an equally vibrant festival. 
         That’s Kerala for you, a land dealing in polar opposites in its own distinct, chilled-out way to put you in a state of trance.</p>
       </div>
+      <div id="kathakImage">
+        <img src="./images/kathakali 02.png" alt="">
+      </div>
     </div>
-    <div id="topDestinations" class="text-center"><h1>Top Destinations</h1></div>
-      <div class="card-group">
+  <div id="topDestinations" class="text-center"><h1>Top Destinations</h1></div>
+  <div class="card-group">
         <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="card">
           <img src="./images/munnar01.jpg" class="card-img-top" alt="image">
