--- a/login.html
+++ b/login.html
@@ -21,22 +21,22 @@ background-size: cover;" background="./images/signupbg.jpg" >
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="./login.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./district.html">Districts</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./index.html#topDestinations">Top Destinations</a>
+              <a class="nav-link" href="#topDestinations">Top Destinations</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
+              <a class="nav-link" href="./login.html">Login</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./signup.html">Signup</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./index.html#contactUS">Contact Us</a>
+              <a class="nav-link" href="./index.html#contacUs">Contact Us</a>
             </li>
           </ul>
       </div>
@@ -51,12 +51,14 @@ background-size: cover;" background="./images/signupbg.jpg" >
          <div class="cardL">
            <h2 class="card-title text-center">keralatourism<a href="./index.html">.org</a></h2>
             <div class="card-body py-md-4">
-             <form _lpchecked="1">
+             <form _lpchecked="1" action="./index.html" onsubmit="return validate();">
               <div class="form-group">
                    <input type="email" class="form-control" id="email" placeholder="Email">
+                   <label for="error" id="error"></label> 
               </div>                        
          <div class="form-group">
            <input type="password" class="form-control" id="password" placeholder="Password">
+           <label for="error" id="passError"></label> 
          </div>
          <div class="d-flex flex-row align-items-center justify-content-between">
             <a href="#">Forgot Password?</a>
@@ -69,8 +71,6 @@ background-size: cover;" background="./images/signupbg.jpg" >
       </div>
       </div>
     <!-- login form ends here -->
-    <br>
-    <br>
-    <br>
+<script src="script.js"></script>
 </body>
 </html>
