--- a/signup.html
+++ b/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login Page</title>
+    <title>Signup Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
@@ -21,22 +21,22 @@ background-size: cover;" background="./images/signupbg.jpg" >
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./district.html">Districts</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#topDestinations">Top Destinations</a>
+              <a class="nav-link" href="./index.html#topDestinations">Top Destinations</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./login.html">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./signup.html">Signup</a>
+              <a class="nav-link" href="#">Signup</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contactUS">Contact Us</a>
+              <a class="nav-link" href="./index.html#contactUS">Contact Us</a>
             </li>
           </ul>
       </div>
